[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/scenes/player/Deck.gd" type="Script" id=1]
[ext_resource path="res://assets/sfx/card_draw.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/sfx/card_throw.wav" type="AudioStream" id=3]

[sub_resource type="BoxShape" id=2]

extents = Vector3( 0.907593, 0.75, 0.75 )

[sub_resource type="BoxShape" id=3]

extents = Vector3( 1.88651, 1, 1.5 )

[sub_resource type="BoxShape" id=4]

extents = Vector3( 3.43984, 1, 3 )

[sub_resource type="AudioStreamRandomPitch" id=5]

audio_stream = ExtResource( 2 )
random_pitch = 1.1

[sub_resource type="AudioStreamRandomPitch" id=6]

audio_stream = ExtResource( 3 )
random_pitch = 1.1

[node name="Deck" type="Spatial"]

script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="." index="0"]

keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = true
fov = 90.0
size = 1.0
near = 0.05
far = 100.0
_sections_unfolded = [ "Transform" ]

[node name="Right Hand" type="Spatial" parent="." index="1"]

transform = Transform( 0.866026, 0, -0.5, 0, 1, 0, 0.5, 0, 0.866026, 0.9, -0.744992, -1.02392 )
_sections_unfolded = [ "Transform" ]

[node name="CardHolder" type="Spatial" parent="Right Hand" index="0"]

transform = Transform( 0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, 0.0423258, 0.260705, 0.121317 )
_sections_unfolded = [ "Transform" ]

[node name="Left Hand" type="Spatial" parent="." index="2"]

transform = Transform( 0.866025, 0, 0.5, 0, 1, 0, -0.5, 0, 0.866025, -0.9, -0.744992, -1.02392 )
_sections_unfolded = [ "Transform" ]

[node name="Deck" type="Spatial" parent="Left Hand" index="0"]

transform = Transform( 1, 1.49012e-08, 0, 0, 0.866026, -0.5, -2.98023e-08, 0.5, 0.866024, -0.00265652, 0.167945, -0.149566 )
_sections_unfolded = [ "Transform" ]

[node name="TargetingArea" type="Area" parent="." index="3"]

input_ray_pickable = false
input_capture_on_drag = false
space_override = 0
gravity_point = false
gravity_distance_scale = 0.0
gravity_vec = Vector3( 0, -1, 0 )
gravity = 9.8
linear_damp = 0.1
angular_damp = 1.0
priority = 0.0
monitoring = true
monitorable = true
collision_layer = 1
collision_mask = 1
audio_bus_override = false
audio_bus_name = "Master"
reverb_bus_enable = false
reverb_bus_name = "Master"
reverb_bus_amount = 0.0
reverb_bus_uniformity = 0.0

[node name="CollisionShape" type="CollisionShape" parent="TargetingArea" index="0"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -4 )
shape = SubResource( 2 )
disabled = false

[node name="CollisionShape2" type="CollisionShape" parent="TargetingArea" index="1"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.010596, -0.00778627, -6.10542 )
shape = SubResource( 3 )
disabled = false

[node name="CollisionShape3" type="CollisionShape" parent="TargetingArea" index="2"]

transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -10.4798 )
shape = SubResource( 4 )
disabled = false

[node name="SfxDraw" type="AudioStreamPlayer" parent="." index="4"]

stream = SubResource( 5 )
volume_db = -25.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="SfxThrow" type="AudioStreamPlayer" parent="." index="5"]

stream = SubResource( 6 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="body_entered" from="TargetingArea" to="." method="_on_TargetingArea_body_entered"]

[connection signal="body_exited" from="TargetingArea" to="." method="_on_TargetingArea_body_exited"]


